--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -50,5 +50,33 @@
   "commonName": "Common Name",
   "family": "Family",
   "genus": "Genus",
-  "species": "Species"
+  "species": "Species",
+  "greeting_morning": "Good Morning!",
+  "home_subtitle": "Which plant friend would you like to care for today?",
+  "search_plants": "Search plants...",
+  "recommended_plants": "Recommended Plants",
+  "my_plants": "My Plants",
+  "no_plants_message": "No plants added yet\nTap + to add your first plant friend",
+  "plant_succulent_name": "Succulent",
+  "plant_succulent_description": "Easy care, perfect for beginners",
+  "plant_pothos_name": "Pothos",
+  "plant_pothos_description": "Air purifying, fast growing",
+  "plant_cactus_name": "Cactus",
+  "plant_cactus_description": "Drought tolerant, unique shape",
+  "plant_mint_name": "Mint",
+  "plant_mint_description": "Fresh fragrance, edible",
+  "plant_snake_name": "Snake Plant",
+  "plant_snake_description": "Air purifying, extremely easy care",
+  "care_level_easy": "Easy",
+  "care_level_medium": "Medium",
+  "care_level_very_easy": "Very Easy",
+  "sunlight_indirect": "Indirect light",
+  "sunlight_scattered": "Scattered light",
+  "sunlight_direct": "Direct sunlight",
+  "sunlight_partial": "Partial sunlight",
+  "sunlight_low": "Low light",
+  "water_low": "Less water",
+  "water_moist": "Keep moist",
+  "water_very_low": "Very little water",
+  "water_frequent": "Water frequently"
 }
