--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -50,5 +50,33 @@
   "commonName": "一般名",
   "family": "科",
   "genus": "属",
-  "species": "種"
+  "species": "種",
+  "greeting_morning": "おはようございます！",
+  "home_subtitle": "今日はどの植物の友達をお世話したいですか？",
+  "search_plants": "植物を検索...",
+  "recommended_plants": "おすすめの植物",
+  "my_plants": "私の植物",
+  "no_plants_message": "まだ植物が追加されていません\n+ をタップして最初の植物友達を追加してください",
+  "plant_succulent_name": "多肉植物",
+  "plant_succulent_description": "お手入れ簡単、初心者に最適",
+  "plant_pothos_name": "ポトス",
+  "plant_pothos_description": "空気清浄、成長が早い",
+  "plant_cactus_name": "サボテン",
+  "plant_cactus_description": "乾燥に強く、独特な形",
+  "plant_mint_name": "ミント",
+  "plant_mint_description": "爽やかな香り、食用可能",
+  "plant_snake_name": "サンスベリア",
+  "plant_snake_description": "空気清浄、とても簡単なお手入れ",
+  "care_level_easy": "簡単",
+  "care_level_medium": "普通",
+  "care_level_very_easy": "とても簡単",
+  "sunlight_indirect": "間接光",
+  "sunlight_scattered": "散乱光",
+  "sunlight_direct": "直射日光",
+  "sunlight_partial": "部分的な日光",
+  "sunlight_low": "低光量",
+  "water_low": "少量の水やり",
+  "water_moist": "湿潤を保つ",
+  "water_very_low": "非常に少ない水やり",
+  "water_frequent": "頻繁な水やり"
 }
