--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -50,5 +50,33 @@
   "commonName": "일반명",
   "family": "과",
   "genus": "속",
-  "species": "종"
+  "species": "종",
+  "greeting_morning": "좋은 아침입니다!",
+  "home_subtitle": "오늘은 어떤 식물 친구를 돌보고 싶으신가요?",
+  "search_plants": "식물 검색...",
+  "recommended_plants": "추천 식물",
+  "my_plants": "내 식물",
+  "no_plants_message": "아직 추가된 식물이 없습니다\n+ 를 눌러 첫 번째 식물 친구를 추가하세요",
+  "plant_succulent_name": "다육식물",
+  "plant_succulent_description": "관리가 쉬워 초보자에게 적합",
+  "plant_pothos_name": "스킨답서스",
+  "plant_pothos_description": "공기정화, 빠른 성장",
+  "plant_cactus_name": "선인장",
+  "plant_cactus_description": "가뭄에 강하고 독특한 모양",
+  "plant_mint_name": "민트",
+  "plant_mint_description": "상쾌한 향기, 식용 가능",
+  "plant_snake_name": "스네이크 플랜트",
+  "plant_snake_description": "공기정화, 매우 쉬운 관리",
+  "care_level_easy": "쉬움",
+  "care_level_medium": "보통",
+  "care_level_very_easy": "매우 쉬움",
+  "sunlight_indirect": "간접광",
+  "sunlight_scattered": "산란광",
+  "sunlight_direct": "직사광선",
+  "sunlight_partial": "부분 햇빛",
+  "sunlight_low": "저조도",
+  "water_low": "적게 급수",
+  "water_moist": "촉촉하게 유지",
+  "water_very_low": "매우 적게 급수",
+  "water_frequent": "자주 급수"
 }
