--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -50,5 +50,33 @@
   "commonName": "俗名",
   "family": "科",
   "genus": "属",
-  "species": "种"
+  "species": "种",
+  "greeting_morning": "早上好！",
+  "home_subtitle": "今天想要照顾哪个植物朋友呢？",
+  "search_plants": "搜索植物...",
+  "recommended_plants": "推荐植物",
+  "my_plants": "我的植物",
+  "no_plants_message": "还没有添加植物\n点击 + 来添加你的第一个植物朋友",
+  "plant_succulent_name": "多肉植物",
+  "plant_succulent_description": "易于养护，适合新手",
+  "plant_pothos_name": "绿萝",
+  "plant_pothos_description": "净化空气，生长快速",
+  "plant_cactus_name": "仙人掌",
+  "plant_cactus_description": "耐旱性强，形态独特",
+  "plant_mint_name": "薄荷",
+  "plant_mint_description": "香气清新，可食用",
+  "plant_snake_name": "虎皮兰",
+  "plant_snake_description": "净化空气，极易养护",
+  "care_level_easy": "简单",
+  "care_level_medium": "中等",
+  "care_level_very_easy": "非常简单",
+  "sunlight_indirect": "间接阳光",
+  "sunlight_scattered": "散射光",
+  "sunlight_direct": "直射阳光",
+  "sunlight_partial": "部分阳光",
+  "sunlight_low": "低光照",
+  "water_low": "少量浇水",
+  "water_moist": "保持湿润",
+  "water_very_low": "很少浇水",
+  "water_frequent": "经常浇水"
 }
